--- a/index.html
+++ b/index.html
@@ -24,18 +24,15 @@
 	<link rel="shortcut icon" href="favicon.png">
 
 	<!-- Beer CSS -->
-	<link href="css/beer.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="css/beer.min.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="css/beer.min.css">
 	<script src="js/beer.min.js" type="text/javascript"></script>
 	<script src="js/light.js" type="text/javascript"></script>
 
 	<!-- Montserrat font -->
-	<link href="css/montserrat.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="css/montserrat.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="css/montserrat.css">
 
 	<!-- CSS overrides -->
-	<link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="css/style.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <script>
