--- a/it/index.html
+++ b/it/index.html
@@ -28,18 +28,15 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 	<!-- Beer CSS -->
-	<link href="../css/beer.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="../css/beer.min.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="../css/beer.min.css">
 	<script src="../js/beer.min.js" type="text/javascript"></script>
 	<script src="../js/light.js" type="text/javascript"></script>
 
 	<!-- Montserrat font -->
-	<link href="../css/montserrat.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="../css/montserrat.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="../css/montserrat.css">
 
 	<!-- CSS overrides -->
-	<link rel="preload" href="../css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="../css/style.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 
 <script>
