--- a/en/kernel.html
+++ b/en/kernel.html
@@ -23,20 +23,21 @@
 	<!--Favicon-->
 	<link rel="shortcut icon" href="../favicon.png">
 
+	<!-- Speed-up requests to CDNs -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 	<!-- Beer CSS -->
-	<link href="../css/beer.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="../css/beer.min.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="../css/beer.min.css">
 	<script src="../js/beer.min.js" type="text/javascript"></script>
 	<script src="../js/light.js" type="text/javascript"></script>
 
 	<!-- Montserrat font -->
-	<link href="../css/montserrat.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="../css/montserrat.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="../css/montserrat.css">
 
 	<!-- CSS overrides -->
-	<link rel="preload" href="../css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="preload" href="../css/kernel.style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="../css/style.css" rel="stylesheet"><link href="../css/kernel.style.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/kernel.style.css">
 </head>
 
 <script>
