--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 	<!--Favicon-->
 	<link rel="shortcut icon" href="favicon.png">
 
+	<!-- Speed-up requests to CDNs -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 	<!-- Beer CSS -->
 	<link rel="stylesheet" href="css/beer.min.css">
 	<script src="js/beer.min.js" type="text/javascript"></script>
