--- a/packages.html
+++ b/packages.html
@@ -27,19 +27,20 @@
 	<!--Favicon-->
 	<link rel="shortcut icon" href="favicon.png">
 
+	<!-- Speed-up requests to CDNs -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 	<!-- Beer CSS -->
-	<link href="css/beer.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="css/beer.min.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="css/beer.min.css">
 	<script src="js/beer.min.js" type="text/javascript"></script>
 	<script src="js/light.js" type="text/javascript"></script>
 
 	<!-- Montserrat font -->
-	<link href="css/montserrat.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="css/montserrat.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="css/montserrat.css">
 
 	<!-- CSS overrides -->
-	<link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="css/style.css" rel="stylesheet"></noscript>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <script>
@@ -76,7 +77,7 @@ function wrap() {
 	</button>
 
 	<div class="small-margin">
-		<article class="center middle small-margin" style="margin-top: 20rem!important">
+		<article class="center small-margin" style="margin-top: 20rem!important">
 			<div class="margin no-wrap">
 				<h6 class="card border center-align bold indigo white-text small-padding">Scegli una lingua &mdash; Choose a language</h6>
 			</div>
