--- a/en/kernel.html
+++ b/en/kernel.html
@@ -10,15 +10,15 @@
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://saloniamatteo.top/en/kernel.html">
+	<meta property="og:url"		content="https://salonia.it/en/kernel.html">
 	<meta property="og:description"	content="Salonia Matteo's Custom Kernel">
-	<meta property="og:image"	content="https://saloniamatteo.top/favicon.png">
+	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
 	<meta property="twitter:description"	content="Salonia Matteo's Custom Kernel">
-	<meta property="twitter:image"		content="https://saloniamatteo.top/favicon.png">
+	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="../favicon.png">
@@ -51,7 +51,7 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 		</div>
 		<div class="col center-align">
 			<a class="button center-align large-text no-margin indigo-text white"
-			   href="https://saloniamatteo.top">Salonia Matteo</a>
+			   href="https://salonia.it">Salonia Matteo</a>
 		</div>
 		<div class="col min no-margin no-padding right-align"
 		     style="margin-right: 0.5em !important">
