--- a/it/index.html
+++ b/it/index.html
@@ -10,15 +10,15 @@
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://saloniamatteo.top/it/index.html">
+	<meta property="og:url"		content="https://salonia.it/it/index.html">
 	<meta property="og:description"	content="Benvenuto sul sito di Salonia Matteo!">
-	<meta property="og:image"	content="https://saloniamatteo.top/favicon.png">
+	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
 	<meta property="twitter:description"	content="Benvenuto sul sito di Salonia Matteo!">
-	<meta property="twitter:image"		content="https://saloniamatteo.top/favicon.png">
+	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="../favicon.png">
@@ -38,7 +38,7 @@
 <script>
 ui();
 
-document.onreadystatechange = function() { load(); document.body.onresize = function() { load() }}
+document.onloadend = function() { load(); document.body.onresize = function() { load() }}
 
 function load() {
 	remember_prefs();
@@ -74,7 +74,7 @@ function toggle_light() {
 			<a href="../index.html" class="chip circle indigo-text white"><i>arrow_backward</i></a>
 		</div>
 		<div class="col center-align">
-			<a class="button center-align large-text no-margin indigo-text white" href="https://saloniamatteo.top">Salonia Matteo</a>
+			<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">Salonia Matteo</a>
 		</div>
 		<div class="col min no-margin no-padding right-align" style="margin-right: 0.5em !important">
 			<img class="responsive" src="../pics/logo_rec.png" style="min-width: 100rem !important">
@@ -122,7 +122,7 @@ function toggle_light() {
 
 		<!-- Arch Linux -->
 		<div class="small-margin row no-wrap middle-align">
-			<a href="https://saloniamatteo.top/Arch">
+			<a href="https://salonia.it/Arch">
 			<div class="col min small-margin">
 					<img src="../pics/arch.png" class="small"></img>
 			</div>
@@ -139,7 +139,7 @@ function toggle_light() {
 
 		<!-- Dotfiles -->
 		<div class="small-margin row no-wrap middle-align">
-			<a href="https://saloniamatteo.top/dotfiles">
+			<a href="https://salonia.it/dotfiles">
 			<div class="col min small-margin">
 					<img src="../pics/gnu.png" class="small"></img>
 			</div>
@@ -270,7 +270,7 @@ function toggle_light() {
 
 		<!-- OpenAlias -->
 		<div class="small-margin row no-wrap middle-align">
-			<a href="https://oa.saloniamatteo.top">
+			<a href="https://oa.salonia.it">
 			<div class="col min small-margin">
 					<img src="../pics/oa.png" class="small"></img>
 			</div>
