--- a/donate.html
+++ b/donate.html
@@ -4,8 +4,8 @@
 	<title>Donazioni/Donate - Salonia Matteo</title>
 
 	<!-- Tell browser to redirect to Italian & English pages -->
-	<link rel="alternate" href="https://saloniamatteo.top/it/donate.html" hreflang="it" />
-	<link rel="alternate" href="https://saloniamatteo.top/en/donate.html" hreflang="en" />
+	<link rel="alternate" href="https://salonia.it/it/donate.html" hreflang="it" />
+	<link rel="alternate" href="https://salonia.it/en/donate.html" hreflang="en" />
 
 	<!-- Optimize page loading on some devices -->
 	<meta charset="utf-8">
@@ -14,15 +14,15 @@
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://saloniamatteo.top/donate.html">
+	<meta property="og:url"		content="https://salonia.it/donate.html">
 	<meta property="og:description"	content="Donazioni | Donate">
-	<meta property="og:image"	content="https://saloniamatteo.top/favicon.png">
+	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
 	<meta property="twitter:description"	content="Donazioni | Donate">
-	<meta property="twitter:image"		content="https://saloniamatteo.top/favicon.png">
+	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="favicon.png">
