--- a/en/contact.html
+++ b/en/contact.html
@@ -10,15 +10,15 @@
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://saloniamatteo.top/en/contact.html">
+	<meta property="og:url"		content="https://salonia.it/en/contact.html">
 	<meta property="og:description"	content="Contact Salonia Matteo">
-	<meta property="og:image"	content="https://saloniamatteo.top/favicon.png">
+	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
 	<meta property="twitter:description"	content="Contact Salonia Matteo">
-	<meta property="twitter:image"		content="https://saloniamatteo.top/favicon.png">
+	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="../favicon.png">
@@ -49,7 +49,7 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 			<a href="index.html" class="chip circle indigo-text white"><i>arrow_backward</i></a>
 		</div>
 		<div class="col center-align">
-			<a class="button center-align large-text no-margin indigo-text white" href="https://saloniamatteo.top">Salonia Matteo</a>
+			<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">Salonia Matteo</a>
 		</div>
 		<div class="col min no-margin no-padding right-align" style="margin-right: 0.5em !important">
 			<img class="responsive" src="../pics/logo_rec.png" style="min-width: 100rem !important">
@@ -90,7 +90,7 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
 			<h6>Personal Server</h6>
-			matteo@mail.saloniamatteo.top
+			matteo@mail.salonia.it
 
 			<div class="right-align">
 			<a href="../matteo.asc" class="button border indigo white-text">GPG key</a>
