--- a/en/donate.html
+++ b/en/donate.html
@@ -10,15 +10,15 @@
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://saloniamatteo.top/en/donate.html">
+	<meta property="og:url"		content="https://salonia.it/en/donate.html">
 	<meta property="og:description"	content="Interested in my projects? Send me a donation!">
-	<meta property="og:image"	content="https://saloniamatteo.top/favicon.png">
+	<meta property="og:image"	content="https://salonia.it/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
 	<meta property="twitter:description"	content="Interested in my projects? Send me a donation!">
-	<meta property="twitter:image"		content="https://saloniamatteo.top/favicon.png">
+	<meta property="twitter:image"		content="https://salonia.it/favicon.png">
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="../favicon.png">
@@ -49,7 +49,7 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 			<a href="index.html" class="chip circle indigo-text white"><i>arrow_backward</i></a>
 		</div>
 		<div class="col center-align">
-			<a href="https://saloniamatteo.top" class="button center-align large-text no-margin indigo-text white">Salonia Matteo</a>
+			<a href="https://salonia.it" class="button center-align large-text no-margin indigo-text white">Salonia Matteo</a>
 		</div>
 		<div class="col min no-margin no-padding right-align" style="margin-right: 0.5em !important">
 			<img class="responsive" src="../pics/logo_rec.png" style="min-width: 100rem !important">
@@ -106,7 +106,7 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 			<p>
 			Alternatively, you can use
 			<a href="https://openalias.org" class="button border tiny indigo white-text">OpenAlias&nbsp;<i>arrow_forward</i></a>
-			When sending funds, you can write <label class="bold medium-text underline">saloniamatteo.top</label>
+			When sending funds, you can write <label class="bold medium-text underline">salonia.it</label>
 			instead of the address, so that your client will automatically replace the text with the
 			Monero address listed above.
 			</p>
