Add new updated mail

--- a/en/contact.html
+++ b/en/contact.html
@@ -90,7 +90,7 @@ document.onreadystatechange = function() { remember_prefs(); document.body.onres
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
 			<h6>Personal Server</h6>
-			matteo@mail.salonia.it
+			matteo@salonia.it
 
 			<div class="right-align">
 			<a href="../matteo.asc" class="button border indigo white-text">GPG key</a>
