Make flags use all of the available space

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@ function wrap() {
 				<div id="f-it" class="col left-align large-margin">
 					<article class="center-align no-padding">
 					<a href="it/contact.html">
-					<img src="pics/it.png" class="responsive medium"
+					<img src="pics/it.png" class="responsive"
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
@@ -95,7 +95,7 @@ function wrap() {
 				<div id="f-en" class="col right-align large-margin">
 					<article class="center-align no-padding">
 					<a href="en/contact.html">
-					<img src="pics/en.png" class="responsive medium"
+					<img src="pics/en.png" class="responsive"
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
