--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function wrap() {
 				<div id="f-it" class="col left-align large-margin">
 					<article class="center-align no-padding">
 					<a href="it/index.html">
-					<img src="pics/it.png" class="responsive medium"
+					<img src="pics/it.png" class="responsive"
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
@@ -92,7 +92,7 @@ function wrap() {
 				<div id="f-en" class="col right-align large-margin">
 					<article class="center-align no-padding">
 					<a href="en/index.html">
-					<img src="pics/en.png" class="responsive medium"
+					<img src="pics/en.png" class="responsive"
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
