--- a/info.html
+++ b/info.html
@@ -83,7 +83,7 @@ function wrap() {
 				<div id="f-it" class="col left-align large-margin">
 					<article class="center-align no-padding">
 					<a href="it/info.html">
-					<img src="pics/it.png" class="responsive medium"
+					<img src="pics/it.png" class="responsive"
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
@@ -96,7 +96,7 @@ function wrap() {
 				<div id="f-en" class="col right-align large-margin">
 					<article class="center-align no-padding">
 					<a href="en/info.html">
-					<img src="pics/en.png" class="responsive medium"
+					<img src="pics/en.png" class="responsive"
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
