--- a/it/kernel.html
+++ b/it/kernel.html
@@ -55,7 +55,7 @@ function adjlen() {
 }
 </script>
 
-<body class="is-light">
+<body class="light">
 	<!-- Header -->
 	<header class="fixed padding indigo white-text">
 	<div class="row no-wrap middle-align">
