--- a/en/info.html
+++ b/en/info.html
@@ -41,7 +41,7 @@ ui();
 document.onreadystatechange = function() { remember_prefs(); document.body.onresize = function() { remember_prefs() }}
 </script>
 
-<body class="is-light">
+<body class="light">
 	<!-- Header -->
 	<header class="fixed padding indigo white-text">
 	<div class="row no-wrap middle-align">
