--- a/kernel.html
+++ b/kernel.html
@@ -66,7 +66,7 @@ function wrap() {
 }
 </script>
 
-<body class="is-light">
+<body class="light">
 	<!-- FAB -->
 	<button class="fixed bottom right square round extra large-margin" style="z-index: 10" onclick="toggle_light()">
 		<i>light_mode</i>
