--- a/it/index.html
+++ b/it/index.html
@@ -38,7 +38,7 @@
 <script>
 ui();
 
-document.onloadend = function() { load(); document.body.onresize = function() { load() }}
+document.onreadystatechange = function() { load(); document.body.onresize = function() { load() }}
 
 function load() {
 	remember_prefs();
