--- a/donate.html
+++ b/donate.html
@@ -51,7 +51,7 @@
 	</button>
 
 	<article class="margin">
-		<article class="indigo no-padding">
+		<article class="indigo no-padding small-margin">
 			<h5 class="center-align white-text small-padding">Scegli una lingua &mdash; Choose a language</h5>
 		</article>
 
