it/index: complete page redesign

--- a/it/index.html
+++ b/it/index.html
@@ -116,7 +116,6 @@ document.onreadystatechange = () => remember_prefs();
 			</a>
 		</nav>
 	</article>
-	</div>
 
 	<!-- Dotfiles -->
 	<article>
@@ -192,124 +191,130 @@ document.onreadystatechange = () => remember_prefs();
 	</article>
 	</div>
 
-	<div class="medium-space"></div>
+	<div class="space"></div>
 
 	<!-- About -->
 	<div>
-	<article class="border no-padding">
-		<h5 id="about" class="left-align medium-padding indigo white-text">
-		<a href="#about">Su di Me</a>
-		</h5>
+	<article class="indigo no-padding">
+		<h5 id="about" class="white-text padding"><a href="#about">Su di me</a></h5>
+	</article>
 
-		<!-- About -->
-		<div class="small-margin row no-wrap middle-align">
-			<a href="info.html">
-			<div class="col min small-margin">
-					<img src="../pics/about.png" class="small"></img>
-			</div>
+	<!-- About -->
+	<article>
+		<div class="row">
+			<img class="circle small" src="../pics/about.png" alt="About">
 
-			<div class="col small-margin">
-				<p><b>Chi sono</b></p>
-				<i class="indigo-text">arrow_forward</i>
+			<div class="max">
+			<h6><a href="info.html">Chi sono</a></h6>
+			<p>Informazioni su di me e sulle mie competenze.</p>
 			</div>
-			</a>
 		</div>
 
-		<div class="divider"></div>
-
-		<!-- Contact -->
-		<div class="small-margin row no-wrap middle-align">
-			<a href="contact.html">
-			<div class="col min small-margin">
-					<img src="../pics/contact.png" class="small"></img>
-			</div>
-
-			<div class="col small-margin">
-				<p><b>Contattami</b></p>
-				<i class="indigo-text">arrow_forward</i>
-			</div>
+		<nav>
+			<a class="button round" href="info.html">
+				<i>arrow_forward</i> Vai
 			</a>
+		</nav>
+	</article>
+
+	<!-- Contact -->
+	<article>
+		<div class="row">
+			<img class="circle small" src="../pics/contact.png" alt="Contact">
+
+			<div class="max">
+			<h6><a href="contact.html">Contattami</a></h6>
+			<p>Scopri come contattarmi.</p>
+			</div>
 		</div>
 
-		<div class="divider"></div>
-
-		<!-- Donate -->
-		<div class="small-margin row no-wrap middle-align">
-			<a href="donate.html">
-			<div class="col min small-margin">
-					<img src="../pics/cash.png" class="small"></img>
-			</div>
-
-			<div class="col small-margin">
-				<p><b>Donazioni</b></p>
-				<i class="indigo-text">arrow_forward</i>
-			</div>
+		<nav>
+			<a class="button round" href="contact.html">
+				<i>arrow_forward</i> Vai
 			</a>
+		</nav>
+	</article>
+
+	<!-- Donate -->
+	<article>
+		<div class="row">
+			<img class="circle small" src="../pics/cash.png" alt="Donate">
+
+			<div class="max">
+			<h6><a href="donate.html">Donazioni</a></h6>
+			<p>Se vuoi sostenermi come un modo per mostrare gratitudine verso il mio lavoro, in questa pagina puoi scoprire come inviarmi una donazione.</p>
+			</div>
 		</div>
+
+		<nav>
+			<a class="button round" href="donate.html">
+				<i>arrow_forward</i> Vai
+			</a>
+		</nav>
 	</article>
 	</div>
 
-	<div class="medium-space"></div>
+	<div class="space"></div>
 
 	<!-- Tools & Links -->
 	<div>
-	<article class="border no-padding">
-		<h5 id="tools-links" class="left-align medium-padding indigo white-text">
-		<a href="#tools-links">Strumenti & Link</a>
-		</h5>
+	<article class="indigo no-padding">
+		<h5 id="tools-links" class="white-text padding"><a href="#tools-links">Strumenti &amp; Link</a></h5>
+	</article>
 
-		<!-- OpenAlias -->
-		<div class="small-margin row no-wrap middle-align">
-			<a href="https://oa.salonia.it">
-			<div class="col min small-margin">
-					<img src="../pics/oa.png" class="small"></img>
-			</div>
+	<!-- OpenAlias -->
+	<article>
+		<div class="row">
+			<img class="circle small" src="../pics/oa.png" alt="OpenAlias logo">
 
-			<div class="col small-margin">
-				<p><b>OpenAlias</b></p>
-				<label class="grey-text medium-text">(link esterno)</label><br>
-				<i class="indigo-text">arrow_forward</i>
+			<div class="max">
+			<h6><a href="https://oa.salonia.it">OpenAlias</a></h6>
+			<p>Ottieni tutti i record <a class="link" href="https://openalias.org">OpenAlias</a> di un dominio, con un'interfaccia utente facile da usare ed intuitiva.</p>
 			</div>
-			</a>
 		</div>
 
-		<div class="divider"></div>
-
-		<!-- GitHub -->
-		<div class="small-margin row no-wrap middle-align">
-			<a href="https://github.com/saloniamatteo">
-			<div class="col min small-margin">
-					<img id="github-1" src="../pics/github-dark.png" class="small"></img>
-			</div>
-
-			<div class="col small-margin">
-				<p><b>Profilo GitHub</b></p>
-				<label class="grey-text medium-text">(link esterno)</label><br>
-				<i class="indigo-text">arrow_forward</i>
-			</div>
+		<nav>
+			<a class="button round" href="https://oa.salonia.it">
+				<i>arrow_forward</i> Vai
 			</a>
+		</nav>
+	</article>
+
+	<!-- Github profile -->
+	<article>
+		<div class="row">
+			<img class="circle small" src="../pics/github.png" alt="Github logo" style="background-color: white!important">
+
+			<div class="max">
+			<h6><a href="https://github.com/saloniamatteo">Profilo Github</a></h6>
+			<p>Visita il mio profilo Github, e scopri tutti i progetti che ho pubblicato.</p>
+			</div>
 		</div>
 
-		<div class="divider"></div>
-
-		<!-- Source code -->
-		<div class="small-margin row no-wrap middle-align">
-			<a href="https://github.com/saloniamatteo/saloniamatteo.github.io">
-			<div class="col min small-margin">
-					<img id="github-2" src="../pics/github-dark.png" class="small"></img>
-			</div>
-
-			<div class="col small-margin">
-				<p><b>Codice sorgente</b></p>
-				<label class="grey-text medium-text">(link esterno)</label><br>
-				<i class="indigo-text">arrow_forward</i>
-			</div>
+		<nav>
+			<a class="button round" href="https://github.com/saloniamatteo">
+				<i>arrow_forward</i> Vai
 			</a>
+		</nav>
+	</article>
+
+	<!-- Website source code -->
+	<article>
+		<div class="row">
+			<img class="circle small" src="../pics/github.png" alt="Github logo" style="background-color: white!important">
+
+			<div class="max">
+			<h6><a href="https://github.com/saloniamatteo/saloniamatteo.github.io">Codice sorgente</a></h6>
+			<p>Ti interessa sapere com'è costruito questo sito? Il codice sorgente sito è disponibile gratuitamente su Github!</p>
+			</div>
 		</div>
+
+		<nav>
+			<a class="button round" href="https://github.com/saloniamatteo">
+				<i>arrow_forward</i> Vai
+			</a>
+		</nav>
 	</article>
 	</div>
-	</div>
-
-	<div class="medium-space"></div>
 </body>
 </html>
