--- a/software.html
+++ b/software.html
@@ -110,7 +110,7 @@
 		<div class="grid">
 			<div class="s6 small-margin center-align">
 				<a href="it/index.html">
-					<img class="responsive square medium" src="pics/it.png" alt="Bandiera Italiana">
+					<img class="responsive square large" src="pics/it.png" alt="Bandiera Italiana">
 				</a>
 				<br>
 				<a class="button mtop-small" href="it/index.html">
@@ -120,7 +120,7 @@
 
 			<div class="s6 small-margin center-align">
 				<a href="en/index.html">
-					<img class="responsive square medium" src="pics/en.png" alt="English Flag">
+					<img class="responsive square large" src="pics/en.png" alt="English Flag">
 				</a>
 				<br>
 				<a class="button mtop-small" href="en/index.html">
