it/index: fix header

--- a/it/index.html
+++ b/it/index.html
@@ -43,13 +43,13 @@
 	<!-- Header -->
 	<header class="fixed small-padding indigo white-text">
 		<div class="grid middle-align">
-			<div class="s4">
+			<div class="s2">
 				<a class="button circle white indigo-text" href="../index.html">
 					<i>arrow_backward</i>
 				</a>
 			</div>
 
-			<div class="s4">
+			<div class="s6 center-align">
 				<a class="button center-align large-text no-margin indigo-text white" href="https://salonia.it">
 					<p class="large-text">Salonia Matteo</p>
 				</a>
